[gd_scene load_steps=13 format=2]

[ext_resource path="res://script_inimigo.gd" type="Script" id=1]
[ext_resource path="res://IMG-20250505-WA0011.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 46.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 270, 29, 61, 60 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ataque"
length = 0.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 187, 212, 59, 59 ), Rect2( 423, 214, 71, 57 ), Rect2( 284, 195, 44, 76 ), Rect2( 338, 206, 73, 65 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 191, 391, 59, 62 ), Rect2( 271, 399, 57, 55 ), Rect2( 343, 416, 68, 37 ), Rect2( 423, 434, 71, 19 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 187, 303, 59, 59 ), Rect2( 274, 299, 58, 63 ), Rect2( 356, 303, 59, 59 ), Rect2( 438, 303, 58, 59 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 187, 30, 59, 59 ), Rect2( 270, 29, 61, 60 ), Rect2( 356, 30, 59, 59 ), Rect2( 438, 29, 58, 60 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.85
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 191, 120, 54, 61 ), Rect2( 267, 122, 54, 59 ), Rect2( 345, 118, 63, 63 ), Rect2( 433, 120, 63, 61 ), Rect2( 510, 122, 63, 59 ), Rect2( 599, 118, 55, 63 ) ]
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 31.5, 10 )

[node name="inimigo" type="Node2D"]
position = Vector2( 480, 285 )

[node name="Inimigo" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Inimigo"]
position = Vector2( 1.52588e-05, 0.999992 )
scale = Vector2( 1.44492, 1.61543 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 270, 29, 61, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inimigo"]
position = Vector2( 8.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Inimigo"]
anims/RESET = SubResource( 2 )
anims/ataque = SubResource( 3 )
anims/death = SubResource( 4 )
anims/hit = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="RayCast2DMaoEsq" type="RayCast2D" parent="Inimigo"]
position = Vector2( -39, 3 )
rotation = -0.010472
scale = Vector2( 1.168, 10.566 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="RayCast2DMaoDir" type="RayCast2D" parent="Inimigo"]
position = Vector2( 52, 4 )
rotation = -0.010472
scale = Vector2( 1.168, 10.566 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="RayCast2D2PeEsq" type="RayCast2D" parent="Inimigo"]
position = Vector2( -13, 57 )
rotation = -1.5708
scale = Vector2( 1.172, 5.659 )
enabled = true
cast_to = Vector2( -33, 0 )

[node name="RayCast2D3PeDir" type="RayCast2D" parent="Inimigo"]
position = Vector2( 29, 55 )
rotation = 1.5708
scale = Vector2( 1.168, 5.566 )
enabled = true
cast_to = Vector2( 35, 0 )

[node name="ProgressBar" type="ProgressBar" parent="Inimigo"]
margin_left = -37.0
margin_top = -74.0
margin_right = 46.0
margin_bottom = -60.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 3.0
value = 1.0
percent_visible = false

[node name="Area2D_Pulo" type="Area2D" parent="Inimigo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inimigo/Area2D_Pulo"]
position = Vector2( 11.5, -59 )
shape = SubResource( 10 )

[connection signal="animation_finished" from="Inimigo/AnimationPlayer" to="Inimigo" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Inimigo/Area2D_Pulo" to="Inimigo" method="_on_Area2D_Pulo_body_entered"]
